# vibration-viewer

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/commands/: build.md  check.md  dev.md  status.md
claudedocs/: research_markpoint_refresh_failure.md
docs/: aidps-gap-analysis.md  annotation-markpoint-bug-arch-review.md  architecture-review.md  code-quality-review.md  data-pipeline-review.md  design-markpoint-refresh-fix.md  program-design.md  project-plan.md  research-project-file-format.md  review-synthesis.md  rust-expert-review.md  rust-hashmap-serialization-review.md  system-design.md  tech-selection.md
notes/features/: a11y-audit-fixes.md
res/: device3_vibration_dashboard.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: annotation.rs  data.rs  device.rs  export.rs  mod.rs  project.rs  statistics.rs
src-tauri/src/models/: annotation.rs  mod.rs  project.rs  spectrum.rs  statistics.rs  vibration.rs
src-tauri/src/services/: csv_reader.rs  downsampling.rs  mod.rs  project_file.rs  project_scanner.rs  stats_engine.rs  time_filter.rs
src/lib/constants/: colors.ts
src/lib/stores/: annotationStore.ts  dataStore.ts  modeStore.ts  projectStore.ts  uiStore.ts  viewStore.ts
src/lib/types/: annotation.ts  project.ts  statistics.ts  vibration.ts
src/lib/utils/: debounce.ts  formatTime.ts  useAnnotationInteraction.ts  useChart.ts
src/routes/: +page.svelte
(+11 files in other folders)
