[package]
name = "vibration-viewer"
version = "0.1.0"
description = "Vibration time-series annotation tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
polars = { version = "0.46", features = ["lazy", "csv"] }
uuid = { version = "1", features = ["v4"] }
